# emu-kern

./: Cargo.toml  bench.sh  debug.sh  readme.md  release.sh  test.sh
,github/workflows/: thumbv4t-nintendo-gba.yml  x86_64-unknown-linux-gnu.yml
.cargo/: config.toml
.github/workflows/: thumbv4t-nintendo-gba.yml  x86_64-unknown-linux-gnu.yml
config/: thumbv4t-nintendo-gba.json  thumbv4t-nintendo-gba.ld
emurs_kernel/: Cargo.toml
emurs_kernel/src/: device.rs  disk.rs  driver.rs  error.rs  lib.rs  mem.rs  prelude.rs  program.rs  subsystem.rs  vfs.rs  video.rs
emurs_kernel/src/drivers/: game.rs  gamefs.rs  mod.rs  ustar.rs  ustarfs.rs
loader/emurs_loader_desktop/: Cargo.toml
loader/emurs_loader_desktop/src/: main.rs
loader/emurs_loader_gba/: Cargo.toml
loader/emurs_loader_gba/src/: main.rs  video.rs
program/emurs_program_gol/: Cargo.toml
program/emurs_program_gol/src/: lib.rs
